documents/test/ParLatteFun.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParLatteFun.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListInit                                (4)
	Init -> Type Ident '(' ListArg ')' Block           (5)
	Init -> Type Ident '=' Expr ';'                    (6)
	ListInit -> Init                                   (7)
	ListInit -> Init ListInit                          (8)
	Arg -> Type Ident                                  (9)
	Arg -> Type 'ref' Ident                            (10)
	ListArg ->                                         (11)
	ListArg -> Arg                                     (12)
	ListArg -> Arg ',' ListArg                         (13)
	Block -> '{' ListStmt '}'                          (14)
	ListStmt ->                                        (15)
	ListStmt -> Stmt ListStmt                          (16)
	Stmt -> ';'                                        (17)
	Stmt -> Block                                      (18)
	Stmt -> Type Ident ';'                             (19)
	Stmt -> Init                                       (20)
	Stmt -> Ident '=' Expr ';'                         (21)
	Stmt -> Ident '++' ';'                             (22)
	Stmt -> Ident '--' ';'                             (23)
	Stmt -> 'return' Expr ';'                          (24)
	Stmt -> 'return' ';'                               (25)
	Stmt -> 'if' '(' Expr ')' Block                    (26)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (27)
	Stmt -> 'while' '(' Expr ')' Block                 (28)
	Stmt -> Expr ';'                                   (29)
	Type -> 'int'                                      (30)
	Type -> 'string'                                   (31)
	Type -> 'bool'                                     (32)
	Type -> 'void'                                     (33)
	Type -> '[' '(' ListType ')' '->' Type ']'         (34)
	ListType ->                                        (35)
	ListType -> Type                                   (36)
	ListType -> Type ',' ListType                      (37)
	Expr6 -> Ident                                     (38)
	Expr6 -> Integer                                   (39)
	Expr6 -> 'true'                                    (40)
	Expr6 -> 'false'                                   (41)
	Expr6 -> Ident '(' ListExpr ')'                    (42)
	Expr6 -> '(' Expr ')' '(' ListExpr ')'             (43)
	Expr6 -> String                                    (44)
	Expr6 -> '(' Expr ')'                              (45)
	Expr5 -> '-' Expr6                                 (46)
	Expr5 -> '!' Expr6                                 (47)
	Expr5 -> Expr6                                     (48)
	Expr4 -> Expr4 MulOp Expr5                         (49)
	Expr4 -> Expr5                                     (50)
	Expr3 -> Expr3 AddOp Expr4                         (51)
	Expr3 -> Expr4                                     (52)
	Expr2 -> Expr2 RelOp Expr3                         (53)
	Expr2 -> Expr3                                     (54)
	Expr1 -> Expr2 '&&' Expr1                          (55)
	Expr1 -> Expr2                                     (56)
	Expr -> Expr1 '||' Expr                            (57)
	Expr -> 'lambda' '(' ListArg ')' '->' Type '.' Expr   (58)
	Expr -> 'λ' '(' ListArg ')' '->' Type '.' Expr     (59)
	Expr -> 'lambda' '(' ListArg ')' '->' Type Block   (60)
	Expr -> 'λ' '(' ListArg ')' '->' Type Block        (61)
	Expr -> Expr1                                      (62)
	ListExpr ->                                        (63)
	ListExpr -> Expr                                   (64)
	ListExpr -> Expr ',' ListExpr                      (65)
	AddOp -> '+'                                       (66)
	AddOp -> '-'                                       (67)
	MulOp -> '*'                                       (68)
	MulOp -> '/'                                       (69)
	MulOp -> '%'                                       (70)
	RelOp -> '<'                                       (71)
	RelOp -> '<='                                      (72)
	RelOp -> '>'                                       (73)
	RelOp -> '>='                                      (74)
	RelOp -> '=='                                      (75)
	RelOp -> '!='                                      (76)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'->'           { PT _ (TS _ 13) }
	'.'            { PT _ (TS _ 14) }
	'/'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	']'            { PT _ (TS _ 24) }
	'bool'         { PT _ (TS _ 25) }
	'else'         { PT _ (TS _ 26) }
	'false'        { PT _ (TS _ 27) }
	'if'           { PT _ (TS _ 28) }
	'int'          { PT _ (TS _ 29) }
	'lambda'       { PT _ (TS _ 30) }
	'ref'          { PT _ (TS _ 31) }
	'return'       { PT _ (TS _ 32) }
	'string'       { PT _ (TS _ 33) }
	'true'         { PT _ (TS _ 34) }
	'void'         { PT _ (TS _ 35) }
	'while'        { PT _ (TS _ 36) }
	'{'            { PT _ (TS _ 37) }
	'||'           { PT _ (TS _ 38) }
	'}'            { PT _ (TS _ 39) }
	'λ'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Init            rules 5, 6
	ListInit        rules 7, 8
	Arg             rules 9, 10
	ListArg         rules 11, 12, 13
	Block           rule  14
	ListStmt        rules 15, 16
	Stmt            rules 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29
	Type            rules 30, 31, 32, 33, 34
	ListType        rules 35, 36, 37
	Expr6           rules 38, 39, 40, 41, 42, 43, 44, 45
	Expr5           rules 46, 47, 48
	Expr4           rules 49, 50
	Expr3           rules 51, 52
	Expr2           rules 53, 54
	Expr1           rules 55, 56
	Expr            rules 57, 58, 59, 60, 61, 62
	ListExpr        rules 63, 64, 65
	AddOp           rules 66, 67
	MulOp           rules 68, 69, 70
	RelOp           rules 71, 72, 73, 74, 75, 76

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'['            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Program        goto state 3
	Init           goto state 4
	ListInit       goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListInit -> Init .                                  (rule 7)
	ListInit -> Init . ListInit                         (rule 8)

	'['            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	%eof           reduce using rule 7

	Init           goto state 4
	ListInit       goto state 14
	Type           goto state 6

State 5

	Program -> ListInit .                               (rule 4)

	%eof           reduce using rule 4


State 6

	Init -> Type . Ident '(' ListArg ')' Block          (rule 5)
	Init -> Type . Ident '=' Expr ';'                   (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 13

State 7

	Type -> '[' . '(' ListType ')' '->' Type ']'        (rule 34)

	'('            shift, and enter state 12


State 8

	Type -> 'bool' .                                    (rule 32)

	')'            reduce using rule 32
	','            reduce using rule 32
	'.'            reduce using rule 32
	']'            reduce using rule 32
	'ref'          reduce using rule 32
	'{'            reduce using rule 32
	L_Ident        reduce using rule 32


State 9

	Type -> 'int' .                                     (rule 30)

	')'            reduce using rule 30
	','            reduce using rule 30
	'.'            reduce using rule 30
	']'            reduce using rule 30
	'ref'          reduce using rule 30
	'{'            reduce using rule 30
	L_Ident        reduce using rule 30


State 10

	Type -> 'string' .                                  (rule 31)

	')'            reduce using rule 31
	','            reduce using rule 31
	'.'            reduce using rule 31
	']'            reduce using rule 31
	'ref'          reduce using rule 31
	'{'            reduce using rule 31
	L_Ident        reduce using rule 31


State 11

	Type -> 'void' .                                    (rule 33)

	')'            reduce using rule 33
	','            reduce using rule 33
	'.'            reduce using rule 33
	']'            reduce using rule 33
	'ref'          reduce using rule 33
	'{'            reduce using rule 33
	L_Ident        reduce using rule 33


State 12

	Type -> '[' '(' . ListType ')' '->' Type ']'        (rule 34)

	')'            reduce using rule 35
	'['            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Type           goto state 17
	ListType       goto state 18

State 13

	Init -> Type Ident . '(' ListArg ')' Block          (rule 5)
	Init -> Type Ident . '=' Expr ';'                   (rule 6)

	'('            shift, and enter state 15
	'='            shift, and enter state 16


State 14

	ListInit -> Init ListInit .                         (rule 8)

	%eof           reduce using rule 8


State 15

	Init -> Type Ident '(' . ListArg ')' Block          (rule 5)

	')'            reduce using rule 11
	'['            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Arg            goto state 40
	ListArg        goto state 41
	Type           goto state 42

State 16

	Init -> Type Ident '=' . Expr ';'                   (rule 6)

	'!'            shift, and enter state 31
	'('            shift, and enter state 32
	'-'            shift, and enter state 33
	'false'        shift, and enter state 34
	'lambda'       shift, and enter state 35
	'true'         shift, and enter state 36
	'λ'            shift, and enter state 37
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 38
	L_quoted       shift, and enter state 39

	Ident          goto state 21
	Integer        goto state 22
	String         goto state 23
	Expr6          goto state 24
	Expr5          goto state 25
	Expr4          goto state 26
	Expr3          goto state 27
	Expr2          goto state 28
	Expr1          goto state 29
	Expr           goto state 30

State 17

	ListType -> Type .                                  (rule 36)
	ListType -> Type . ',' ListType                     (rule 37)

	')'            reduce using rule 36
	','            shift, and enter state 20


State 18

	Type -> '[' '(' ListType . ')' '->' Type ']'        (rule 34)

	')'            shift, and enter state 19


State 19

	Type -> '[' '(' ListType ')' . '->' Type ']'        (rule 34)

	'->'           shift, and enter state 71


State 20

	ListType -> Type ',' . ListType                     (rule 37)

	')'            reduce using rule 35
	'['            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Type           goto state 17
	ListType       goto state 70

State 21

	Expr6 -> Ident .                                    (rule 38)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 42)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	'&&'           reduce using rule 38
	'('            shift, and enter state 69
	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'||'           reduce using rule 38


State 22

	Expr6 -> Integer .                                  (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'||'           reduce using rule 39


State 23

	Expr6 -> String .                                   (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'||'           reduce using rule 44


State 24

	Expr5 -> Expr6 .                                    (rule 48)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'||'           reduce using rule 48


State 25

	Expr4 -> Expr5 .                                    (rule 50)

	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'||'           reduce using rule 50


State 26

	Expr4 -> Expr4 . MulOp Expr5                        (rule 49)
	Expr3 -> Expr4 .                                    (rule 52)

	'!='           reduce using rule 52
	'%'            shift, and enter state 66
	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            shift, and enter state 67
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            shift, and enter state 68
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	'||'           reduce using rule 52

	MulOp          goto state 65

State 27

	Expr3 -> Expr3 . AddOp Expr4                        (rule 51)
	Expr2 -> Expr3 .                                    (rule 54)

	'!='           reduce using rule 54
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'+'            shift, and enter state 63
	','            reduce using rule 54
	'-'            shift, and enter state 64
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'||'           reduce using rule 54

	AddOp          goto state 62

State 28

	Expr2 -> Expr2 . RelOp Expr3                        (rule 53)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 55)
	Expr1 -> Expr2 .                                    (rule 56)

	'!='           shift, and enter state 55
	'&&'           shift, and enter state 56
	')'            reduce using rule 56
	','            reduce using rule 56
	';'            reduce using rule 56
	'<'            shift, and enter state 57
	'<='           shift, and enter state 58
	'=='           shift, and enter state 59
	'>'            shift, and enter state 60
	'>='           shift, and enter state 61
	'||'           reduce using rule 56

	RelOp          goto state 54

State 29

	Expr -> Expr1 . '||' Expr                           (rule 57)
	Expr -> Expr1 .                                     (rule 62)

	')'            reduce using rule 62
	','            reduce using rule 62
	';'            reduce using rule 62
	'||'           shift, and enter state 53


State 30

	Init -> Type Ident '=' Expr . ';'                   (rule 6)

	';'            shift, and enter state 52


State 31

	Expr5 -> '!' . Expr6                                (rule 47)

	'('            shift, and enter state 32
	'false'        shift, and enter state 34
	'true'         shift, and enter state 36
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 38
	L_quoted       shift, and enter state 39

	Ident          goto state 21
	Integer        goto state 22
	String         goto state 23
	Expr6          goto state 51

State 32

	Expr6 -> '(' . Expr ')' '(' ListExpr ')'            (rule 43)
	Expr6 -> '(' . Expr ')'                             (rule 45)

	'!'            shift, and enter state 31
	'('            shift, and enter state 32
	'-'            shift, and enter state 33
	'false'        shift, and enter state 34
	'lambda'       shift, and enter state 35
	'true'         shift, and enter state 36
	'λ'            shift, and enter state 37
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 38
	L_quoted       shift, and enter state 39

	Ident          goto state 21
	Integer        goto state 22
	String         goto state 23
	Expr6          goto state 24
	Expr5          goto state 25
	Expr4          goto state 26
	Expr3          goto state 27
	Expr2          goto state 28
	Expr1          goto state 29
	Expr           goto state 50

State 33

	Expr5 -> '-' . Expr6                                (rule 46)

	'('            shift, and enter state 32
	'false'        shift, and enter state 34
	'true'         shift, and enter state 36
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 38
	L_quoted       shift, and enter state 39

	Ident          goto state 21
	Integer        goto state 22
	String         goto state 23
	Expr6          goto state 49

State 34

	Expr6 -> 'false' .                                  (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'||'           reduce using rule 41


State 35

	Expr -> 'lambda' . '(' ListArg ')' '->' Type '.' Expr    (rule 58)
	Expr -> 'lambda' . '(' ListArg ')' '->' Type Block    (rule 60)

	'('            shift, and enter state 48


State 36

	Expr6 -> 'true' .                                   (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'||'           reduce using rule 40


State 37

	Expr -> 'λ' . '(' ListArg ')' '->' Type '.' Expr    (rule 59)
	Expr -> 'λ' . '(' ListArg ')' '->' Type Block       (rule 61)

	'('            shift, and enter state 47


State 38

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	'||'           reduce using rule 2


State 39

	String -> L_quoted .                                (rule 3)

	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'||'           reduce using rule 3


State 40

	ListArg -> Arg .                                    (rule 12)
	ListArg -> Arg . ',' ListArg                        (rule 13)

	')'            reduce using rule 12
	','            shift, and enter state 46


State 41

	Init -> Type Ident '(' ListArg . ')' Block          (rule 5)

	')'            shift, and enter state 45


State 42

	Arg -> Type . Ident                                 (rule 9)
	Arg -> Type . 'ref' Ident                           (rule 10)

	'ref'          shift, and enter state 44
	L_Ident        shift, and enter state 2

	Ident          goto state 43

State 43

	Arg -> Type Ident .                                 (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 44

	Arg -> Type 'ref' . Ident                           (rule 10)

	L_Ident        shift, and enter state 2

	Ident          goto state 86

State 45

	Init -> Type Ident '(' ListArg ')' . Block          (rule 5)

	'{'            shift, and enter state 85

	Block          goto state 84

State 46

	ListArg -> Arg ',' . ListArg                        (rule 13)

	')'            reduce using rule 11
	'['            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Arg            goto state 40
	ListArg        goto state 83
	Type           goto state 42

State 47

	Expr -> 'λ' '(' . ListArg ')' '->' Type '.' Expr    (rule 59)
	Expr -> 'λ' '(' . ListArg ')' '->' Type Block       (rule 61)

	')'            reduce using rule 11
	'['            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Arg            goto state 40
	ListArg        goto state 82
	Type           goto state 42

State 48

	Expr -> 'lambda' '(' . ListArg ')' '->' Type '.' Expr    (rule 58)
	Expr -> 'lambda' '(' . ListArg ')' '->' Type Block    (rule 60)

	')'            reduce using rule 11
	'['            shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Arg            goto state 40
	ListArg        goto state 81
	Type           goto state 42

State 49

	Expr5 -> '-' Expr6 .                                (rule 46)

	'!='           reduce using rule 46
	'%'            reduce using rule 46
	'&&'           reduce using rule 46
	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	','            reduce using rule 46
	'-'            reduce using rule 46
	'/'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'||'           reduce using rule 46


State 50

	Expr6 -> '(' Expr . ')' '(' ListExpr ')'            (rule 43)
	Expr6 -> '(' Expr . ')'                             (rule 45)

	')'            shift, and enter state 80


State 51

	Expr5 -> '!' Expr6 .                                (rule 47)
